--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "s-mcdonald/functions",
   "description": "array_rand_bias plucks a random value from an array with a bias towards the start of the array index.",
-  "keywords": ["probability", "random_bool", "array_rand_bias", "random_bias"],
+  "keywords": ["probability", "random_bool", "array_rand_bias", "rand_bias"],
   "homepage": "https://github.com/s-mcdonald/Functions",
   "license": "MIT",
   "version": "0.0.4",
