--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "keywords": ["slugify", "like_int", "rand_bias", "random_bool", "array_rand_bias", "array_entry_exist"],
   "homepage": "https://github.com/s-mcdonald/Functions",
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "authors": [
     {
       "name": "Sam McDonald",
@@ -27,6 +27,7 @@
       "src/random_bool.php",
       "src/prevent_cache.php",
       "src/array_rand_bias.php",
+      "src/array_rand_pluck.php",
       "src/array_entry_exist.php"
     ]
   },
